<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/todoBackgroundSecondary"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/todoPrimaryDark"
        android:hint="@string/todo_add_task"
        android:inputType="text"
        android:textColor="@color/todoTextSecondary"
        android:textColorHint="@color/todoTextSecondary"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_work"
            android:text="@string/todo_work"
            android:textColor="@color/todoTextPrimary" />

        <RadioButton
            android:id="@+id/rbLearning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_learning"
            android:text="@string/todo_learning"
            android:textColor="@color/todoTextPrimary" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_personal"
            android:checked="true"
            android:text="@string/todo_personal"
            android:textColor="@color/todoTextPrimary" />

        <RadioButton
            android:id="@+id/rbShopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_shopping"
            android:text="@string/todo_shopping"
            android:textColor="@color/todoTextPrimary" />

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/todoPrimary"
        android:text="@string/todo_add_task"
        android:textColor="@color/todoTextPrimary" />
</LinearLayout>